--- a/mines/mines.vcxproj.filters
+++ b/mines/mines.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="PackedStore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Desktop\dev\opengl-3.3-core\src\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityManager.h">
@@ -70,6 +73,9 @@
     </ClInclude>
     <ClInclude Include="PackedArray.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Triangle.h">
+      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
