A normal (heh) monkey

--- a/mines/mines.vcxproj.filters
+++ b/mines/mines.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="Mesh.h">
       <Filter>Header Files\assets</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="INFO.md">
