--- a/mines/mines.vcxproj
+++ b/mines/mines.vcxproj
@@ -107,7 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -147,7 +147,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -169,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Context.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
