--- a/mines/mines.vcxproj.filters
+++ b/mines/mines.vcxproj.filters
@@ -104,6 +104,12 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IndexedRenderMesh.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="IndexedMesh.h">
+      <Filter>Header Files\assets</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="INFO.md">
