--- a/mines/mines.vcxproj.filters
+++ b/mines/mines.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="MapSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityManager.h">
