--- a/mines/mines.vcxproj
+++ b/mines/mines.vcxproj
@@ -110,6 +110,7 @@
       <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\HastyNoise;C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
+      <AdditionalOptions>-openmp:experimental %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -152,6 +153,7 @@
       <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\HastyNoise;C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
+      <AdditionalOptions>-openmp:experimental %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
