--- a/mines/mines.vcxproj
+++ b/mines/mines.vcxproj
@@ -115,8 +115,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoised.lib;hastyNoise_avx2d.lib;hastyNoise_avx512d.lib;hastyNoise_sse2d.lib;hastyNoise_sse41d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Debug;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoise.lib;hastyNoise_avx2.lib;hastyNoise_avx512.lib;hastyNoise_sse2.lib;hastyNoise_sse41.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Release;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -160,8 +160,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoised.lib;hastyNoise_avx2d.lib;hastyNoise_avx512d.lib;hastyNoise_sse2d.lib;hastyNoise_sse41d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Debug;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoise.lib;hastyNoise_avx2.lib;hastyNoise_avx512.lib;hastyNoise_sse2.lib;hastyNoise_sse41.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Release;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
