--- a/mines/mines.vcxproj
+++ b/mines/mines.vcxproj
@@ -107,7 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\tracy-0.6.3;C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\HastyNoise;C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\lua-5.3.5\include;C:\Users\Pol\Desktop\dev\tracy-0.6.3;C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\HastyNoise;C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
       <AdditionalOptions>-openmp:experimental %(AdditionalOptions)</AdditionalOptions>
@@ -115,8 +115,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoise.lib;hastyNoise_avx2.lib;hastyNoise_avx512.lib;hastyNoise_sse2.lib;hastyNoise_sse41.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Release;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>lua.lib;SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoise.lib;hastyNoise_avx2.lib;hastyNoise_avx512.lib;hastyNoise_sse2.lib;hastyNoise_sse41.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\lua-5.3.5\build\lua\x64\Release;C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Release;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -150,7 +150,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>TRACY_ENABLE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\tracy-0.6.3;C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\HastyNoise;C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Pol\Desktop\dev\lua-5.3.5\include;C:\Users\Pol\Desktop\dev\tracy-0.6.3;C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\HastyNoise;C:\Users\Pol\Desktop\dev\glm-0.9.9.7;C:\Users\Pol\Desktop\dev\assimp-5.0.1\include;C:\Users\Pol\Desktop\dev\opengl-3.3-core\include;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
       <AdditionalOptions>-openmp:experimental %(AdditionalOptions)</AdditionalOptions>
@@ -160,8 +160,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoise.lib;hastyNoise_avx2.lib;hastyNoise_avx512.lib;hastyNoise_sse2.lib;hastyNoise_sse41.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Release;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>lua.lib;SDL2.lib;SDL2main.lib;opengl32.lib;glu32.lib;assimp-vc142-mtd.lib;hastyNoise.lib;hastyNoise_avx2.lib;hastyNoise_avx512.lib;hastyNoise_sse2.lib;hastyNoise_sse41.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Pol\Desktop\dev\lua-5.3.5\build\lua\x64\Release;C:\Users\Pol\Desktop\dev\HastyNoise-0.8.3\build\Release;C:\Users\Pol\Desktop\dev\SDL2-2.0.12\lib\x64;C:\Users\Pol\Desktop\dev\assimp-5.0.1\build\code\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
